@@ -1,5 +1,5 @@
 # Whether CalDAV is enabled or not
-com.openexchange.caldav.enabled=false
+com.openexchange.caldav.enabled=true
 
 # Configures the ID of the folder tree used by the CalDAV interface 
 com.openexchange.caldav.tree=0
@@ -14,8 +14,7 @@ com.openexchange.caldav.interval.start=one_month
 # "one_year" (default) and "two_years".  
 com.openexchange.caldav.interval.end=one_year
 
-
-# Tells users whete to find a caldav folder. This can be displayed in frontends.
+# Tells users where to find a caldav folder. This can be displayed in frontends.
 # You can use the variables [hostname] and [folderId] 
 # If you chose to deploy caldav as a virtual host (say 'dav.open-xchange.com') use
 # https://dav.open-xchange.com/caldav/[folderId] as the value
