@@ -1,5 +1,5 @@
 # Whether CardDAV is enabled or not
-com.openexchange.carddav.enabled=false
+com.openexchange.carddav.enabled=true
 
 # A comma-separated list of folder IDs to exclude from the synchronization. 
 # Use this to disable syncing of very large folders (e.g. the global address 
