@@ -1,6 +1,7 @@
 * 2012-09-14 - tobias.friedrich@open-xchange.com
 
- - Fix for bug 22967: More flexible user-agent matching for Mac OS Addressbook client 
+ - Fix for bug 22967: More flexible user-agent matching for Mac OS Addressbook client
+ - Fix for bug 22993: Enabled CalDAV/CardDAV by default 
 
 * 2012-09-13 - tobias.friedrich@open-xchange.com
 
